# KSpecStream

./: .gitignore  .gitmodules  CMakeLists.txt  KSpecStream.cmake  KSpecStream.cpp  KSpecStream.h  KWavStream.cpp  KWavStream.h  README.md  colortable_inferno.h  colortable_jet.h  main.cpp
